adds READ to AdminPermission